fix: [SRM-15793]: fix alignment for Change event cards (#18305)
* fix: [SRM-15793]: fix alignment for Change event cards

* fix: [SRM-15793]: updated snapshots

--- a/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/ChangesAndServiceDependency/components/ChangesTable/components/ChangeEventCard/components/ChangeDetails/ChangeDetails.module.scss
+++ b/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/ChangesAndServiceDependency/components/ChangesTable/components/ChangeEventCard/components/ChangeDetails/ChangeDetails.module.scss
@@ -10,6 +10,13 @@
   width: fit-content;
   grid-gap: var(--padding-button) !important;
   margin: var(--spacing-large) 0 !important;
+}
+
+.gridColumnsWidthCustomChangeSource {
+  grid-template-columns: 20% 88%;
+}
+
+.gridColumnsWidth {
   grid-template-columns: 12% 88%;
 }
 
