--- a/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/HealthScoreChart/HealthScoreChart.module.scss
+++ b/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/HealthScoreChart/HealthScoreChart.module.scss
@@ -6,7 +6,6 @@
  */
 
 .main {
-  // width: 100% !important;
   .timelineRow {
     margin-bottom: var(--spacing-small) !important;
     display: flex;
@@ -45,5 +44,9 @@
 
   &.extraMarginForChart {
     margin-left: 42px;
+  }
+
+  &.containerWidth {
+    width: 100% !important;
   }
 }
